plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fazecast:jSerialComm:2.11.4'
}

application {
    mainClass = 'morsetrainer.MorseClient'
}

run {
    standardInput = System.in
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

jar {
    manifest {
        attributes 'Main-Class': 'morsetrainer.MorseClient',
                   'Class-Path': configurations.runtimeClasspath.collect { 'lib/' + it.name }.join(' ')
    }
    archiveFileName = 'MorseClient.jar'
}

// Copy dependencies to lib/ alongside the JAR
task copyDeps(type: Copy) {
    from configurations.runtimeClasspath
    into "$projectDir/lib"
}

jar.finalizedBy copyDeps
